widget: Fix jittery cursor preventing mouse pointer hiding

Only show the pointer again when the position actually changed.

https://bugzilla.gnome.org/show_bug.cgi?id=688456